#14361: Implement program API

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -251,7 +251,12 @@ if(ENABLE_TRACY)
 endif()
 
 add_library(metal_header_directories INTERFACE)
-target_include_directories(metal_header_directories INTERFACE ${PROJECT_SOURCE_DIR}/tt_metal/hw/inc)
+target_include_directories(
+    metal_header_directories
+    INTERFACE
+        ${PROJECT_SOURCE_DIR}/tt_metal/hw/inc
+        ${PROJECT_SOURCE_DIR}/tt_metal/include
+)
 foreach(lib ${BoostPackages})
     target_include_directories(metal_header_directories INTERFACE ${Boost${lib}_SOURCE_DIR}/include)
 endforeach()
