#0: Option 1 - internal targets each reach upwards

--- a/tt_metal/common/CMakeLists.txt
+++ b/tt_metal/common/CMakeLists.txt
@@ -24,4 +24,6 @@ target_include_directories(
         ${UMD_HOME}
         ${PROJECT_SOURCE_DIR}
         ${PROJECT_SOURCE_DIR}/tt_metal
+    PRIVATE
+        ../include # Ugly: breaks encapsulation
 )
