--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -251,12 +251,7 @@ if(ENABLE_TRACY)
 endif()
 
 add_library(metal_header_directories INTERFACE)
-target_include_directories(
-    metal_header_directories
-    INTERFACE
-        ${PROJECT_SOURCE_DIR}/tt_metal/hw/inc
-        ${PROJECT_SOURCE_DIR}/tt_metal/include
-)
+target_include_directories(metal_header_directories INTERFACE ${PROJECT_SOURCE_DIR}/tt_metal/hw/inc)
 foreach(lib ${BoostPackages})
     target_include_directories(metal_header_directories INTERFACE ${Boost${lib}_SOURCE_DIR}/include)
 endforeach()
