#15127: Shift to 22.04 benchmark docker image

--- a/.github/workflows/blackhole-post-commit.yaml
+++ b/.github/workflows/blackhole-post-commit.yaml
@@ -83,6 +83,7 @@ jobs:
     with:
       arch: blackhole
       runner-label: BH
+      os: "ubuntu-22.04"
     secrets: inherit
 
 #   profiler-regression:
